removed ArrayProcessor, pointless nowadays